# Swift_UVOT_Photometry

./: .buildinfo  MANIFEST.in  README.md  environment.yml  fix_headas_activate.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  scripts.html  search.html  searchindex.js  setup_caldb.sh
.github/workflows/: ci.yml  deploy-github-pages.yml
SwiftPhotom/: __init__.py  _version.py  commands.py  errors.py  help.py  uvot.py
_modules/: index.html
_modules/SwiftPhotom/: commands.html  errors.html  uvot.html
_sources/: index.rst.txt  scripts.rst.txt
_sources/api/: SwiftPhotom.commands.rst.txt  SwiftPhotom.errors.rst.txt  SwiftPhotom.help.rst.txt  SwiftPhotom.rst.txt  SwiftPhotom.uvot.rst.txt
_sources/inputs/: index.rst.txt
_static/: documentation_options.js
api/: SwiftPhotom.commands.html  SwiftPhotom.errors.html  SwiftPhotom.help.html  SwiftPhotom.html  SwiftPhotom.uvot.html
conda/: meta.yaml
docs/: conf.py  index.rst
docs/_static/: swift-uvot-photometry-docs.css
docs/_templates/: layout.html
extraction/: index.html
inputs/: index.html
scripts/: setup_conda_hooks.sh
tests/: __init__.py  conftest.py  test_batch_photom.py  test_commands.py  test_download_swift.py  test_errors.py  test_heasoft.py  test_help.py  test_photom_csv.py  test_swift_setup.py  test_uvot.py
